--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
       <li><a href="html4">Session 4: Coding with friends</a></li>
       <li><a href="html5">Session 5: Does anyone care?</a></li>
   </ul>
+  <h2>Intro to Ruby</h2>
+  <ul class="posts">
+      <li><a href="ruby1">Session 1: About the internet</a></li>
+  </ul>
 </div>
 
 
