--- a/ruby2/index.html
+++ b/ruby2/index.html
@@ -236,8 +236,28 @@
 <span class='k'>else</span>
 	<span class='n'>type</span> <span class='o'>=</span> <span class='s2'>&quot;adult&quot;</span>
 <span class='k'>end</span>
-</code></pre></div><div class='highlight'><pre><code class='ruby'>
 </code></pre></div>
+<h3 id='case_statement'>Case statement</h3>
+
+<p>The case statement (called a switch statement in many other languages) is used for testing multiple conditions, when <code>if ... elsif .. else</code> would become unweildy.</p>
+<div class='highlight'><pre><code class='ruby'><span class='nb'>print</span> <span class='s2'>&quot;Enter your favourite programming language: &quot;</span>
+<span class='n'>language</span> <span class='o'>=</span> <span class='nb'>gets</span><span class='o'>.</span><span class='n'>chomp</span>
+
+<span class='k'>case</span> <span class='n'>language</span><span class='o'>.</span><span class='n'>upcase</span>
+<span class='k'>when</span> <span class='s2'>&quot;Ruby&quot;</span>
+	<span class='nb'>puts</span> <span class='s2'>&quot;Great choice&quot;</span>
+<span class='k'>when</span> <span class='s2'>&quot;Python&quot;</span>
+	<span class='nb'>puts</span> <span class='s2'>&quot;Not bad. You should try Ruby though&quot;</span>
+<span class='k'>when</span> <span class='s2'>&quot;Javascript&quot;</span>
+	<span class='nb'>puts</span> <span class='s2'>&quot;Javascript is a necessary evil, but not nearly as nice as ruby&quot;</span>
+<span class='k'>else</span>
+	<span class='nb'>puts</span> <span class='s2'>&quot;Ruby is better!&quot;</span>
+<span class='k'>end</span>
+</code></pre></div><div class='exercise alert alert-info'><strong>
+<p>Task:</p>
+</strong>
+<p>Rewrite your solution to <code>grade.rb</code> using <code>if ... elsif .. else</code>.</p>
+</div>
 	</div>
 
 	
